# wasm-kegs

./: README.md  pyproject.toml
src/wasm_kegs/: __init__.py  packages.py
tests/: test_basic.py  test_count_vowels.py
tests/count_vowels_package/: manifest.toml
tests/count_vowels_plugin/: manifest.toml
tests/simple_rust_plugin/: README.md  build.sh
tests/simple_rust_plugin/simple-plugin-keg-folder/: manifest.toml
tests/simple_rust_plugin/simple-rust-extism-plugin-source/: Cargo.toml
tests/simple_rust_plugin/simple-rust-extism-plugin-source/src/: lib.rs
