[project]
name = "wasm-kegs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "extism>=1.0.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
